--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -4,15 +4,16 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.171);
   padding: 2vmax;
   color: rgba(0, 0, 0, 0.678);
-  font: 500 1.5vmax "Roboto", sans-serif;
+  font: 500 1.5vmax "Roboto";
   text-align: center;
 }
 
 .products {
   display: flex;
   flex-wrap: wrap;
-  padding: 0.5vmax;
+  padding: 0 5vmax;
   justify-content: center;
+  min-height: 30vh;
 }
 
 .paginationBox {
@@ -20,6 +21,7 @@
   justify-content: center;
   margin: 6vmax;
 }
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -37,24 +39,48 @@
 .page-item:first-child {
   border-radius: 5px 0 0 5px;
 }
+
 .page-item:last-child {
   border-radius: 0 5px 5px 0;
 }
 .page-link {
   text-decoration: none;
-  font: 300 0.7vmax "Roboto", sans-serif;
+  font: 300 0.7vmax "Roboto";
   color: rgb(80, 80, 80);
   transition: all 0.3s;
 }
+
 .page-item:hover {
   background-color: rgb(230, 230, 230);
 }
-.page-link:hover .page-link {
-  color: rgb(27, 26, 26);
+
+.page-item:hover .page-link {
+  color: rgb(0, 0, 0);
 }
+
 .pageItemActive {
   background-color: tomato;
 }
+
 .pageLinkActive {
   color: white;
+}
+
+.filterBox {
+  width: 10vmax;
+  position: absolute;
+  top: 10vmax;
+  left: 4vmax;
+}
+
+@media screen and (max-width: 600px) {
+  .filterBox {
+    width: 20vmax;
+    position: static;
+    margin: auto;
+  }
+
+  .page-link {
+    font: 300 1.7vmax "Roboto";
+  }
 }
